// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display applications 1`] = `
<div
  className="display-flex-column boxed-group it_project_card"
  data-key="foo"
  style={
    {
      "height": 100,
    }
  }
>
  <div
    className="display-flex-center"
  >
    <div
      className="project-card-main big-padded padded-bottom display-flex-center"
    >
      <Tooltip
        overlay={
          <span>
            qualifier.APP
          </span>
        }
        placement="top"
      >
        <span
          className="spacer-right"
        >
          <QualifierIcon
            qualifier="APP"
          />
        </span>
      </Tooltip>
      <h3
        className="h2 project-card-name text-ellipsis"
        title="Foo"
      >
        <ForwardRef(Link)
          to={
            {
              "pathname": "/dashboard",
              "search": "?id=foo",
            }
          }
        >
          Foo
        </ForwardRef(Link)>
      </h3>
      <ProjectCardQualityGate
        status="OK"
      />
      <span
        className="flex-grow"
      />
      <DateTimeFormatter
        date="2017-01-01"
      >
        <Component />
      </DateTimeFormatter>
    </div>
    <div
      className="project-card-meta big-padded padded-bottom display-flex-center"
    >
      <div
        className="display-flex-center overflow-hidden"
      >
        <PrivacyBadgeContainer
          className="spacer-right"
          qualifier="APP"
          visibility="public"
        />
      </div>
    </div>
  </div>
  <div
    className="display-flex-end flex-grow"
  >
    <div
      className="project-card-main big-padded-left big-padded-right big-padded-bottom"
    >
      <ProjectCardMeasures
        componentQualifier="APP"
        isNewCode={false}
        measures={
          {
            "alert_status": "OK",
            "new_bugs": "12",
            "reliability_rating": "1.0",
            "sqale_rating": "1.0",
          }
        }
      />
    </div>
    <div
      className="project-card-meta display-flex-end big-padded-left big-padded-right big-padded-bottom"
    />
  </div>
</div>
`;

exports[`should display applications: with project count 1`] = `
<div
  className="display-flex-column boxed-group it_project_card"
  data-key="foo"
  style={
    {
      "height": 100,
    }
  }
>
  <div
    className="display-flex-center"
  >
    <div
      className="project-card-main big-padded padded-bottom display-flex-center"
    >
      <Tooltip
        overlay={
          <span>
            qualifier.APP
            <span>
               ‒ 
              x_projects_.3
            </span>
          </span>
        }
        placement="top"
      >
        <span
          className="spacer-right"
        >
          <QualifierIcon
            qualifier="APP"
          />
        </span>
      </Tooltip>
      <h3
        className="h2 project-card-name text-ellipsis"
        title="Foo"
      >
        <ForwardRef(Link)
          to={
            {
              "pathname": "/dashboard",
              "search": "?id=foo",
            }
          }
        >
          Foo
        </ForwardRef(Link)>
      </h3>
      <ProjectCardQualityGate
        status="OK"
      />
      <span
        className="flex-grow"
      />
      <DateTimeFormatter
        date="2017-01-01"
      >
        <Component />
      </DateTimeFormatter>
    </div>
    <div
      className="project-card-meta big-padded padded-bottom display-flex-center"
    >
      <div
        className="display-flex-center overflow-hidden"
      >
        <PrivacyBadgeContainer
          className="spacer-right"
          qualifier="APP"
          visibility="public"
        />
      </div>
    </div>
  </div>
  <div
    className="display-flex-end flex-grow"
  >
    <div
      className="project-card-main big-padded-left big-padded-right big-padded-bottom"
    >
      <ProjectCardMeasures
        componentQualifier="APP"
        isNewCode={false}
        measures={
          {
            "alert_status": "OK",
            "new_bugs": "12",
            "projects": "3",
            "reliability_rating": "1.0",
            "sqale_rating": "1.0",
          }
        }
      />
    </div>
    <div
      className="project-card-meta display-flex-end big-padded-left big-padded-right big-padded-bottom"
    />
  </div>
</div>
`;

exports[`should display configure analysis button for logged in user: default 1`] = `
<div
  className="display-flex-column boxed-group it_project_card"
  data-key="foo"
  style={
    {
      "height": 100,
    }
  }
>
  <div
    className="display-flex-center"
  >
    <div
      className="project-card-main big-padded padded-bottom display-flex-center"
    >
      <h3
        className="h2 project-card-name text-ellipsis"
        title="Foo"
      >
        <ForwardRef(Link)
          to={
            {
              "pathname": "/dashboard",
              "search": "?id=foo",
            }
          }
        >
          Foo
        </ForwardRef(Link)>
      </h3>
    </div>
    <div
      className="project-card-meta big-padded padded-bottom display-flex-center"
    >
      <div
        className="display-flex-center overflow-hidden"
      >
        <PrivacyBadgeContainer
          className="spacer-right"
          qualifier="TRK"
          visibility="public"
        />
      </div>
    </div>
  </div>
  <div
    className="display-flex-end flex-grow"
  >
    <div
      className="project-card-main big-padded-left big-padded-right big-padded-bottom"
    >
      <div
        className="spacer-top spacer-bottom"
      >
        <span
          className="note"
        >
          projects.not_analyzed.TRK
        </span>
        <ForwardRef(Link)
          className="button spacer-left"
          to={
            {
              "pathname": "/dashboard",
              "search": "?id=foo",
            }
          }
        >
          projects.configure_analysis
        </ForwardRef(Link)>
      </div>
    </div>
    <div
      className="project-card-meta display-flex-end big-padded-left big-padded-right big-padded-bottom"
    />
  </div>
</div>
`;

exports[`should display configure analysis button for logged in user: hidden if sync in place 1`] = `
<div
  className="display-flex-column boxed-group it_project_card project-card-disabled"
  data-key="foo"
  style={
    {
      "height": 100,
    }
  }
>
  <div
    className="display-flex-center"
  >
    <div
      className="project-card-main big-padded padded-bottom display-flex-center"
    >
      <h3
        className="h2 project-card-name text-ellipsis"
        title="Foo"
      >
        Foo
      </h3>
    </div>
    <div
      className="project-card-meta big-padded padded-bottom display-flex-center"
    >
      <div
        className="display-flex-center overflow-hidden"
      >
        <PrivacyBadgeContainer
          className="spacer-right"
          qualifier="TRK"
          visibility="public"
        />
      </div>
    </div>
  </div>
  <div
    className="display-flex-end flex-grow"
  >
    <div
      className="project-card-main big-padded-left big-padded-right big-padded-bottom"
    >
      <div
        className="spacer-top spacer-bottom"
      >
        <span
          className="note"
        >
          projects.not_analyzed.TRK
        </span>
      </div>
    </div>
    <div
      className="project-card-meta display-flex-end big-padded-left big-padded-right big-padded-bottom"
    />
  </div>
</div>
`;

exports[`should display correclty when project need issue synch 1`] = `
<div
  className="display-flex-column boxed-group it_project_card project-card-disabled"
  data-key="foo"
  style={
    {
      "height": 100,
    }
  }
>
  <div
    className="display-flex-center"
  >
    <div
      className="project-card-main big-padded padded-bottom display-flex-center"
    >
      <h3
        className="h2 project-card-name text-ellipsis"
        title="Foo"
      >
        Foo
      </h3>
      <ProjectCardQualityGate
        status="OK"
      />
      <span
        className="flex-grow"
      />
      <DateTimeFormatter
        date="2017-01-01"
      >
        <Component />
      </DateTimeFormatter>
    </div>
    <div
      className="project-card-meta big-padded padded-bottom display-flex-center"
    >
      <div
        className="display-flex-center overflow-hidden"
      >
        <PrivacyBadgeContainer
          className="spacer-right"
          qualifier="TRK"
          visibility="public"
        />
      </div>
    </div>
  </div>
  <div
    className="display-flex-end flex-grow"
  >
    <div
      className="project-card-main big-padded-left big-padded-right big-padded-bottom"
    >
      <ProjectCardMeasures
        componentQualifier="TRK"
        isNewCode={false}
        measures={
          {
            "alert_status": "OK",
            "new_bugs": "12",
            "reliability_rating": "1.0",
            "sqale_rating": "1.0",
          }
        }
      />
    </div>
    <div
      className="project-card-meta display-flex-end big-padded-left big-padded-right big-padded-bottom"
    />
  </div>
</div>
`;

exports[`should display not analyzed yet 1`] = `
<div
  className="display-flex-column boxed-group it_project_card"
  data-key="foo"
  style={
    {
      "height": 100,
    }
  }
>
  <div
    className="display-flex-center"
  >
    <div
      className="project-card-main big-padded padded-bottom display-flex-center"
    >
      <h3
        className="h2 project-card-name text-ellipsis"
        title="Foo"
      >
        <ForwardRef(Link)
          to={
            {
              "pathname": "/dashboard",
              "search": "?id=foo",
            }
          }
        >
          Foo
        </ForwardRef(Link)>
      </h3>
    </div>
    <div
      className="project-card-meta big-padded padded-bottom display-flex-center"
    >
      <div
        className="display-flex-center overflow-hidden"
      >
        <PrivacyBadgeContainer
          className="spacer-right"
          qualifier="TRK"
          visibility="public"
        />
      </div>
    </div>
  </div>
  <div
    className="display-flex-end flex-grow"
  >
    <div
      className="project-card-main big-padded-left big-padded-right big-padded-bottom"
    >
      <div
        className="spacer-top spacer-bottom"
      >
        <span
          className="note"
        >
          projects.not_analyzed.TRK
        </span>
      </div>
    </div>
    <div
      className="project-card-meta display-flex-end big-padded-left big-padded-right big-padded-bottom"
    />
  </div>
</div>
`;

exports[`should display the overall measures and quality gate 1`] = `
<div
  className="display-flex-column boxed-group it_project_card"
  data-key="foo"
  style={
    {
      "height": 100,
    }
  }
>
  <div
    className="display-flex-center"
  >
    <div
      className="project-card-main big-padded padded-bottom display-flex-center"
    >
      <h3
        className="h2 project-card-name text-ellipsis"
        title="Foo"
      >
        <ForwardRef(Link)
          to={
            {
              "pathname": "/dashboard",
              "search": "?id=foo",
            }
          }
        >
          Foo
        </ForwardRef(Link)>
      </h3>
      <ProjectCardQualityGate
        status="OK"
      />
      <span
        className="flex-grow"
      />
      <DateTimeFormatter
        date="2017-01-01"
      >
        <Component />
      </DateTimeFormatter>
    </div>
    <div
      className="project-card-meta big-padded padded-bottom display-flex-center"
    >
      <div
        className="display-flex-center overflow-hidden"
      >
        <PrivacyBadgeContainer
          className="spacer-right"
          qualifier="TRK"
          visibility="public"
        />
      </div>
    </div>
  </div>
  <div
    className="display-flex-end flex-grow"
  >
    <div
      className="project-card-main big-padded-left big-padded-right big-padded-bottom"
    >
      <ProjectCardMeasures
        componentQualifier="TRK"
        isNewCode={false}
        measures={
          {
            "alert_status": "OK",
            "new_bugs": "12",
            "reliability_rating": "1.0",
            "sqale_rating": "1.0",
          }
        }
      />
    </div>
    <div
      className="project-card-meta display-flex-end big-padded-left big-padded-right big-padded-bottom"
    />
  </div>
</div>
`;
